--- a/django/requirements.txt
+++ b/django/requirements.txt
@@ -1,8 +1,7 @@
 Django==3.1.4
 djangorestframework==3.12.2
-flake8==3.8.4
 psycopg2==2.8.6
 Pillow==8.0.1
 django-ckeditor==6.0.0
 flake8==3.8.4
-black==20.8b1
+djangorestframework-simplejwt==4.6.0
